--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nexty-session",
+  "name": "nexty-session-generator",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
@@ -7,11 +7,11 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
+    "@whiskeysockets/baileys": "^6.7.8",
+    "archiver": "^5.3.1",
     "body-parser": "^1.20.2",
-    "qrcode": "^1.5.3",
-    "@whiskeysockets/baileys": "^6.7.5",
-    "jszip": "^3.10.1"
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "qrcode": "^1.5.3"
   }
 }
