--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nexty-session-generator",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -12,6 +12,6 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "qrcode": "^1.5.3"
+    "pino": "^9.0.0"
   }
 }
